--- a/package.json
+++ b/package.json
@@ -42,10 +42,14 @@
     "webpack": "1.12.14"
   },
   "name": "ionic-recorder",
-  "description": "ionic-recorder: Ionic2 / WebAudio project,",
+  "description": "ionic-recorder: Ionic2 / WebAudio project",
   "license": "GPL 2.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/tracktunes/ionic-recorder.git"
+  },
+  "scripts": {
+    "start": "ionic serve --browser chromium-browser",
+    "test": "gulp --gulpfile test/gulpfile.ts --cwd ./ test"
   }
 }
