--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ionic-app-lib": "^2.0.0-beta.9",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.21",
+    "karma-chrome-launcher": "^0.2.2",
     "karma-coverage": "^0.5.4",
     "karma-jasmine": "^0.3.7",
     "karma-mocha-reporter": "^1.2.3",
