--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
   "license": "GPL 2.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/tracktunes/ionic-recorder.git"
+    "url": "https://github.com/tracktunes/ionic-recorder"
   },
   "scripts": {
     "start": "ionic serve --browser chromium-browser",
