--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "typings": "^0.7.7",
     "webpack": "1.12.14"
   },
-  "description": "ionic-recorder: Ionic2 / WebAudio project",
+  "description": "ionic-recorder: Ionic2 / WebAudio hybrid app",
   "license": "GPL-2.0",
   "repository": {
     "type": "git",
