npm test now automatically strips whitespace from all text files in app before running the tests !!! no more manual labor for that !!!

--- a/package.json
+++ b/package.json
@@ -50,6 +50,6 @@
   },
   "scripts": {
     "start": "ionic serve --browser chromium-browser",
-    "test": "gulp --gulpfile test/gulpfile.ts --cwd ./ test"
+    "test": "find ./app -type f | xargs sed -i 's/[ \t]*$//' ; gulp --gulpfile test/gulpfile.ts --cwd ./ test"
   }
 }
